--- a/index.css
+++ b/index.css
@@ -1,8 +1,15 @@
+body {
+  text-align: center;
+}
+
 .main {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .img-desktop {
