--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  background-color: #f3eae3;
 }
 
 .main {
@@ -10,6 +11,7 @@ body {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
+  background-color: white;
 }
 
 .img-desktop {
