--- a/index.css
+++ b/index.css
@@ -12,21 +12,24 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: white;
+  border-radius: 20px;
 }
 
 .img-desktop {
   width: 100%;
+
+  height: 100%;
 }
 
 
 .right-side {
-  width: 300px;
+
   padding-left: auto;
   padding-right: auto;
 }
 
 .left-side {
-  width: 300px;
+
   padding-left: auto;
   padding-right: auto;
 }
