--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body {
   text-align: start;
   padding-left: auto;
   padding-right: auto;
-  margin: 15px;
+  /* margin: 15px; */
   background-color: aqua;
 }
 
