--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@ body {
   text-align: center;
   background-color: #f3eae3;
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .main {
@@ -19,6 +21,7 @@ body {
 .img-desktop {
   width: 100%;
 
+  object-fit: fill;
 }
 
 
@@ -33,5 +36,8 @@ body {
 .left-side {
 
   background-color: red;
-
+  background-image: url("https://res.cloudinary.com/roldan-cloudinary/image/upload/v1729906913/image-product-desktop_c6em2k.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 400px;
 }
