--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 .img-desktop {
@@ -29,8 +29,9 @@ body {
   text-align: start;
   padding-left: auto;
   padding-right: auto;
-
+  height: 400px;
   background-color: aqua;
+  border-radius: 0 10px 10px 0;
 }
 
 .left-side {
@@ -40,4 +41,5 @@ body {
   background-size: cover;
   width: 100%;
   height: 400px;
+  border-radius: 10px 0 0 10px;
 }
