--- a/index.css
+++ b/index.css
@@ -47,3 +47,8 @@ body {
   height: 400px;
   border-radius: 10px 0 0 10px;
 }
+
+.title {
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+}
