--- a/index.css
+++ b/index.css
@@ -27,8 +27,6 @@ body {
 
 .right-side {
   text-align: start;
-  padding-left: auto;
-  padding-right: auto;
   height: 350px;
   width: 450px;
   /* background-color: aqua; */
@@ -38,12 +36,10 @@ body {
 }
 
 .left-side {
-
   background-color: red;
   background-image: url("https://res.cloudinary.com/roldan-cloudinary/image/upload/v1729906913/image-product-desktop_c6em2k.jpg");
   background-size: cover;
   width: 500px;
-
   height: 400px;
   border-radius: 10px 0 0 10px;
 }
@@ -51,8 +47,13 @@ body {
 .title {
   font-family: "Fraunces", serif;
   font-weight: 700;
+  font-size: x-large;
+  margin-right: 80px;
+
 }
 
-.green {
+.title-green {
+  font-family: "Fraunces", serif;
+  font-weight: 700;
   color: #3d8168;
 }
