--- a/index.css
+++ b/index.css
@@ -48,7 +48,6 @@ body {
   font-family: "Fraunces", serif;
   font-weight: 700;
   font-size: x-large;
-  margin-right: 80px;
 
 }
 
@@ -62,4 +61,9 @@ body {
   font-weight: 300;
   letter-spacing: 5px;
   font-size: small;
+}
+
+.text {
+  font-size: smaller;
+  font-weight: 400;
 }
