--- a/index.css
+++ b/index.css
@@ -21,17 +21,22 @@ body {
 .img-desktop {
   width: 100%;
 
-  object-fit: fill;
+  object-fit: cover;
 }
 
 
 .right-side {
   text-align: start;
-  height: 350px;
-  width: 450px;
+  /* height: 350px; */
+  width: 200px;
   /* background-color: aqua; */
   /* border-radius: 0 10px 10px 0; */
-  margin: 25px;
+  padding-left: 50px;
+  padding-right: 50px;
+
+}
+
+.right-side div {
 
 }
 
@@ -39,7 +44,7 @@ body {
   background-color: red;
   background-image: url("https://res.cloudinary.com/roldan-cloudinary/image/upload/v1729906913/image-product-desktop_c6em2k.jpg");
   background-size: cover;
-  width: 500px;
+  width: 300px;
   height: 400px;
   border-radius: 10px 0 0 10px;
 }
