--- a/index.css
+++ b/index.css
@@ -69,3 +69,10 @@ body {
 .old-price {
   text-decoration: line-through;
 }
+
+.prices {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+    justify-content: space-between;
+}
