--- a/index.css
+++ b/index.css
@@ -4,7 +4,8 @@ body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-
+  display: flex;
+  flex-direction: column;
   gap: 10vh;
 }
 
