--- a/index.css
+++ b/index.css
@@ -51,8 +51,9 @@ header {
 
 .title {
   font-family: "Fraunces", serif;
-  font-weight: 700;
+  font-weight: 800;
   font-size: x-large;
+  letter-spacing: 2px;
 
 }
 
