--- a/index.css
+++ b/index.css
@@ -104,3 +104,12 @@ header {
   letter-spacing: 1px;
   margin-bottom: 20px;
 }
+
+
+@media (max-width: 768px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+
+  }
+}
