--- a/index.css
+++ b/index.css
@@ -115,12 +115,12 @@ header {
     margin-right: 5vw;
     }
 
-  /* .left-side {
-    background-color: red;
-    background-image: url("https://res.cloudinary.com/roldan-cloudinary/image/upload/v1729906913/image-product-desktop_c6em2k.jpg");
+  .left-side {
+    /* background-color: red; */
+    background-image: url("https://res.cloudinary.com/roldan-cloudinary/image/upload/v1730329915/image-product-mobile_ehr7zp.jpg");
     background-size: cover;
-    width: 300px;
-    height: 400px;
-    border-radius: 10px 0 0 10px;
-  } */
+    width: 90vw;
+    height: 350px;
+    /* border-radius: 10px 0 0 10px;  */
+  }
 }
