--- a/index.css
+++ b/index.css
@@ -121,6 +121,6 @@ header {
     background-size: cover;
     width: 90vw;
     height: 350px;
-    /* border-radius: 10px 0 0 10px;  */
+    border-radius: 10px 10px 0 0;
   }
 }
