--- a/index.css
+++ b/index.css
@@ -116,11 +116,11 @@ header {
     }
 
   .left-side {
-    /* background-color: red; */
     background-image: url("https://res.cloudinary.com/roldan-cloudinary/image/upload/v1730329915/image-product-mobile_ehr7zp.jpg");
     background-size: cover;
-    width: 90vw;
-    height: 350px;
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat;
+    width: 100%;
     border-radius: 10px 10px 0 0;
   }
 }
